@@ -12,7 +12,6 @@ import org.springframework.stereotype.Component;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -45,7 +44,7 @@ public class ReportRepositoryAdapter implements ReportRepository {
     public List<Report> findByAthleteId(final String athleteId) {
         return mongoRepository.findByAthleteIdOrderByCreatedAtDesc(athleteId).stream()
                 .map(reportMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -62,6 +61,6 @@ public class ReportRepositoryAdapter implements ReportRepository {
     public List<Report> findTop5ByOrderByCreatedAtDesc() {
         return mongoRepository.findTop5ByOrderByCreatedAtDesc().stream()
                 .map(reportMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
