@@ -6,7 +6,6 @@ import com.karateflow.backend.test.persistence.document.TemplateExerciseDocument
 import com.karateflow.backend.test.persistence.document.TestTemplateDocument;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
 
 @Component
 @SuppressWarnings("PMD.TestClassWithoutTestCases")
@@ -22,7 +21,7 @@ public class TestTemplateMapper {
                 .description(domain.getDescription())
                 .exercises(domain.getExercises().stream()
                         .map(this::toExerciseDocument)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .createdAt(domain.getCreatedAt())
                 .build();
     }
@@ -37,7 +36,7 @@ public class TestTemplateMapper {
                 .description(document.getDescription())
                 .exercises(document.getExercises().stream()
                         .map(this::toExerciseDomain)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .createdAt(document.getCreatedAt())
                 .build();
     }
